refactor(components): 重构组件路径和样式
- 更新了 App.js 中的组件导入路径
- 更新了 Daily、Discover、ForgotPasswordPage 和 LoginPage 组件中的 NavBar 导入路径
- 删除了 NavBar.css 和 ProductDetail.css 文件
- 删除了 NavBar 组件

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -577,6 +577,10 @@
 
 .page-content{
   margin-top: 70px;
+  overflow-Y: 'auto';
+  flex: 1;
+  min-Height: 0;
+  margin-Bottom: 7px;
 }
 
 /* 按钮美化 */
