--- a/src/components/product/ProductDetail.css
+++ b/src/components/product/ProductDetail.css
@@ -300,7 +300,7 @@
   #specificationModal .bg-white {
     display: flex;
     flex-direction: column;
-    height: 80vh;
+    height: 58vh;
     padding: 0;
   }
   
@@ -311,7 +311,7 @@
   
   #specificationModal .modal-body {
     overflow-y: auto;
-    padding: 24px 16px 0 16px;
+    padding: 0px 16px 0 16px;
   }
   
   #specificationModal .modal-footer {
@@ -319,6 +319,10 @@
     background: #fff;
     padding: 16px;
     border-top: 1px solid #f0f0f0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
   
   /* 规格选项 */
