--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -7,7 +7,7 @@
   --color-primary-200: #d0b7fa;
   --color-primary-300: #c0a0f8;
   --color-primary-400: #b088f5;
-  --color-primary-500: #A070F3;
+  --color-primary-500: #6B4EFF;
   --color-primary-600: #6B4EFF;
   --color-primary-700: #4B36A8;
   --color-primary-800: #3A2A82;
